firewall
# Generated by iptables-save v1.4.21 on Mon Jun 12 22:48:23 2017
*nat
:PREROUTING ACCEPT [102:8310]
:INPUT ACCEPT [14:2275]
:OUTPUT ACCEPT [13:881]
:POSTROUTING ACCEPT [97:6120]
-A POSTROUTING -o ppp0 -j MASQUERADE
COMMIT
# Completed on Mon Jun 12 22:48:23 2017
# Generated by iptables-save v1.4.21 on Mon Jun 12 22:48:23 2017
*filter
:INPUT DROP [159:13972]
:FORWARD DROP [101:6177]
:OUTPUT ACCEPT [160:18199]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -i wlan0 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -i wlan0 -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -i wlan0 -p udp -m udp --dport 68 -j ACCEPT
-A FORWARD -i ppp0 -o wlan0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -s 172.24.1.0/24 -d 217.31.204.130/32 -i wlan0 -o ppp0 -p tcp -m tcp --dport 53 -j ACCEPT
-A FORWARD -s 172.24.1.0/24 -d 193.29.206.206/32 -i wlan0 -o ppp0 -p tcp -m tcp --dport 53 -j ACCEPT
-A FORWARD -s 172.24.1.0/24 -d 217.31.204.130/32 -i wlan0 -o ppp0 -p udp -m udp --dport 53 -j ACCEPT
-A FORWARD -s 172.24.1.0/24 -d 193.29.206.206/32 -i wlan0 -o ppp0 -p udp -m udp --dport 53 -j ACCEPT
-A FORWARD -s 172.24.1.0/24 -i wlan0 -o ppp0 -p tcp -m tcp --dport 80 -j ACCEPT
-A FORWARD -s 172.24.1.0/24 -i wlan0 -o ppp0 -p tcp -m tcp --dport 443 -j ACCEPT
-A FORWARD -s 172.24.1.0/24 -i wlan0 -o ppp0 -p tcp -m tcp --dport 110 -j ACCEPT
-A FORWARD -s 172.24.1.0/24 -i wlan0 -o ppp0 -p tcp -m tcp --dport 143 -j ACCEPT
-A FORWARD -s 172.24.1.0/24 -i wlan0 -o ppp0 -p tcp -m tcp --dport 993 -j ACCEPT
-A FORWARD -s 172.24.1.0/24 -i wlan0 -o ppp0 -p tcp -m tcp --dport 995 -j ACCEPT
-A FORWARD -s 172.24.1.0/24 -i wlan0 -o ppp0 -p tcp -m tcp --dport 465 -j ACCEPT
COMMIT
# Completed on Mon Jun 12 22:48:23 2017
